# imgr-serve

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.build.yaml  docker-compose.yaml
.github/workflows/: docker-build.yml
src/: config.rs  image_processing.rs  image_types.rs  main.rs  openapi.rs  persistent_store.rs  processed_image_cache.rs  processing.rs  proxying_images.rs  storage.rs  types.rs
src/image_ops/: image_types.rs  mod.rs  operations.rs  processing.rs
src/routes/: errors.rs  images.rs  mod.rs  openapi.rs  responses.rs
src/store/: mod.rs  persistent_store.rs  procesessed_persistent_cache.rs  processed_cache.rs  processed_image_cache.rs  processed_memory_cache.rs  source_image_storage.rs
src/utils/: background.rs  filename_extractor.rs  mod.rs  types.rs
