[package]
name = "img_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
image = { version = "0.25.9", features = ["rayon"] }
imghdr = "0.7.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "parking_lot"] }
serde = { version = "1.0.228", features = ["derive"] }
webp = "0.3.1"
log = "0.4.29"
envconfig = "0.11.1"
async-trait = "0.1.89"
reqwest = "0.12.28"
serde_json = "1.0.146"
lru = "0.16.2"
fast_image_resize = { version = "5.5.0", features = ["image"] }
percent-encoding = "2.3.2"
sanitize-filename = "0.6.0"
lazy_static = "1.5.0"

[profile.release]
debug = true
