[package]
name = "img_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
image = { version = "0.25.9", features = ["rayon"] }
imghdr = "0.7.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "parking_lot"] }
serde = { version = "1.0.228", features = ["derive"] }
webp = "0.3.1"
log = "0.4.29"
envconfig = "0.11.1"
async-trait = "0.1.89"
reqwest = "0.12.28"
serde_json = "1.0.146"
fast_image_resize = { version = "5.5.0", features = ["image", "rayon"] }
rayon = "1.10"
percent-encoding = "2.3.2"
sanitize-filename = "0.6.0"
quick_cache = "0.6.18"
tower-http = { version = "0.6.8", features = ["timeout", "trace"] }

[profile.release]
debug = true
